--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 <h1>
 <a id="gwion" class="anchor" href="#gwion" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gwion</h1>
 
-<ul>
-<li>[ ] test
-gwion is a object-oriented programming language, aimed at making music</li>
-</ul>
+<p>gwion is a object-oriented programming language, aimed at making music</p>
 
 <p>It is strongly inspired by <a href="http://chuck.stanford.edu/">chuck</a>, and as chuck it is 'strongly timed'
     based on <a href="http://paulbatchelor.github.io/proj/soundpipe.html">soundpipe</a>
