Pre-deploy commit :smile:

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
+title: Gwion
+description: {{ site.tagline }}
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
